composer initial pattern handling

--- a/cmd/compose/www/src/tags.css
+++ b/cmd/compose/www/src/tags.css
@@ -7,6 +7,11 @@
   display: list-item;
 }
 
+.mk-run-ctrl[data-tag="pattern_return"]  {
+  display: list-item;
+}
+
+
 .mk-run-ctrl__item--repeats[data-tag="execute"]  {
   display: block;
   list-style: none;
