compose pattern calls
* test statements are story statements now ( really, there's a "testing" interface that's a story statement )
* all execs blocks are arrays
* tweaks to spec display

--- a/cmd/compose/www/src/tags.css
+++ b/cmd/compose/www/src/tags.css
@@ -12,6 +12,7 @@
 }
 
 
+.mk-run-ctrl[data-tag="pattern_return"],
 .mk-run-ctrl__item--repeats[data-tag="execute"]  {
   display: block;
   list-style: none;
