--- a/cmd/compose/lair/lair.css
+++ b/cmd/compose/lair/lair.css
@@ -1,19 +1,24 @@
-.table {
-  display: grid;
-  column-gap: 10px;
-  grid-template-columns: auto auto; 
+.em-item {
+  display: flex;
 }
-.handle {
-  background-color: whitesmoke;
+.em-gutter {
+  position: relative;
+  margin-right: 0.5ch;
+}
+.em-gutter:not(.dragging) {
   color: grey;
-  width: 100%;
-  text-align: right;
+  background-color: whitesmoke;
 }
-.dragimg {
-  position: absolute;;
-  left:0;
-  top:0;
-  width: 40px; 
-  height: 40px; 
-  background: red;
+.em-len {
+  visibility: hidden;
+}
+.dragging {
+  color: grey;
+  background-color: silver;
+}
+.em-num {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  text-align: right;
 }
