--- a/cmd/compose/lair/lair.css
+++ b/cmd/compose/lair/lair.css
@@ -35,7 +35,7 @@
 
 /* dragEnter adds, dragLeave removes */
 .em-drag-highlight {
-  background-color: lightblue !important;
+  background-color: lightblue/* !important*/;
   transition: background-color 0.5s ease;
 }
 
