--- a/cmd/compose/lair/lair.css
+++ b/cmd/compose/lair/lair.css
@@ -1,23 +1,32 @@
 .em-table {
   padding-left: 2em;
 }
+.em-table__footer {
+  height: 0.5em;
+}
 .em-item {
   display: flex;
-  box-sizing: border-box;
 }
 .em-gutter {
   position: relative;
   margin-right: 0.5ch;
+  user-select: none;
+  cursor: grab;
+}
+.em-drag-mark {
+  cursor: grabbing;
+  cursor: -moz-grabbing;
+  cursor: -webkit-grabbing;  
 }
 .em-item:not(.em-drag-mark) > .em-gutter {
   color: grey;
   background-color: whitesmoke;
 }
 .em-item--top {
-  border-top: 3px solid black;
+  box-shadow:inset 0px 3px rgba(0,0,0,0.6);
 }
 .em-item--bot {
-  border-bottom: 3px solid black;
+  box-shadow:inset 0px -3px rgba(0,0,0,0.6);
 }
 .em-num {
   position: absolute;
