lair: rough fixup to stop from dropping parents into children, etc
* rework model as a heirarchy of items; side effect: this enables <elem> to be removed.
* renamed dopper.source, dropper.start to reduce confusion i

--- a/cmd/compose/lair/lair.css
+++ b/cmd/compose/lair/lair.css
@@ -71,6 +71,6 @@
   color: grey;
   background-color: silver;
 }
-.em-drag-from:not(.em-drag-image) {
+.em-drag-start:not(.em-drag-image) {
   filter: blur(1px);
 }
