refactoring node and items
goals:
. view shouldnt be creating nodes, nodes are the model. we (will) want (to be able to have) multiple views of the nodes.
. reading items into nodes provides a way to (eventually) handle compact data read/write well
. nodes are most similar to em-table items from lair

--- a/cmd/compose/www/src/tags.css
+++ b/cmd/compose/www/src/tags.css
@@ -11,9 +11,8 @@
   display: list-item;
 }
 
-
 .mk-run-ctrl[data-tag="pattern_return"],
-.mk-run-ctrl__item--repeats[data-tag="execute"]  {
+.mk-repeater[data-tag="execute"]  {
   display: block;
   list-style: none;
   margin-left: 2em;
