--- a/cmd/compose/www/src/tags.css
+++ b/cmd/compose/www/src/tags.css
@@ -12,7 +12,7 @@
 }
 
 .mk-run-ctrl[data-tag="pattern_return"],
-.mk-repeater[data-tag="execute"]  {
+.mk-run-param[data-tag="execute"]  {
   display: block;
   list-style: none;
   margin-left: 2em;
