--- a/cmd/compose/www/index.css
+++ b/cmd/compose/www/index.css
@@ -96,21 +96,21 @@ body {
 
 .mk-composer {
   color: #6a5f49;
- 
   border: 1px solid #c3baaa;
   border-color: rgba(195, 186, 170, 0.9);
   cursor: default;
   grid-area: editor;
   overflow-y:scroll;
-  background-color: #f2f6c1;
+  background-color: whitesmoke;
 
   line-height: 25px;
-  background-image: -moz-linear-gradient(top, transparent, transparent 24px, rgb(239, 207, 173) 0px);
-  background-image: -webkit-linear-gradient(top, transparent, transparent 24px, rgb(239, 207, 173) 0px);
-  -webkit-background-size: 100% 25px;
-  background-size: 100% 25px;
-  padding: 20px;
-}
+  background-position: 0px 6px;
+  background-color: #f2f6c1;
+  background-image: -webkit-repeating-linear-gradient(top, transparent 0%, transparent 24px, rgba(239, 207, 173, 0.7) 24px, rgba(239, 207, 173, 0.7) 25px);
+  background-image:  -moz-repeating-linear-gradient(top, transparent 0%, transparent 24px, rgba(239, 207, 173, 0.7) 24px, rgba(239, 207, 173, 0.7) 25px);
+  background-image:  -o-repeating-linear-gradient(top, transparent 0%, transparent 24px, rgba(239, 207, 173, 0.7) 24px, rgba(239, 207, 173, 0.7) 25px);
+
+
 
 .mk-a-button:hover {
   text-decoration: underline;
