--- a/cmd/compose/www/src/lair/lair.css
+++ b/cmd/compose/www/src/lair/lair.css
@@ -1,6 +1,3 @@
-.em-table--inline {
-  margin: 0.1em 0em;
-}
 .em-row--block {
   display: flex;
 }
@@ -8,8 +5,8 @@
   display: inline;
 }
 .em-gutter {
-  /*background-color: whitesmoke;*/
   color: rgb(239, 207, 173);
+  font-weight: bold;
   display: inline-block;
   position: relative;
   cursor: default;
