composer: drag and drop for code lines

--- a/cmd/compose/www/index.css
+++ b/cmd/compose/www/index.css
@@ -103,6 +103,7 @@ body {
   overflow-y:scroll;
   background-color: whitesmoke;
 
+  padding-top: 10px;
   line-height: 25px;
   background-position: 0px 6px;
   background-color: #f2f6c1;
