--- a/cmd/compose/www/index.css
+++ b/cmd/compose/www/index.css
@@ -102,6 +102,7 @@ body {
   grid-area: editor;
   overflow-y:scroll;
   background-color: whitesmoke;
+  position: relative;
 
   padding-top: 10px;
   line-height: 25px;
@@ -113,8 +114,8 @@ body {
 }
 
 .mk-trash-can {
-  position: sticky;
-  text-align: right;
+  position: absolute;
+  right: 5px;
   bottom: 1.2rem;
   font-size: 2rem;
 }
