start of some minor drag improvements
numbered rows should only be draggable to other numbered rows
- expand Type to allow methods
- clone all drag images for consistency of handling
- refactor some "canDrag" , etc questions to NodeList
- fix bug with misordered src/dst move parameters: probably always that way.
- move em-shift to body

--- a/cmd/compose/www/src/lair/lair.css
+++ b/cmd/compose/www/src/lair/lair.css
@@ -59,26 +59,18 @@
   min-width: 1ch;
 }
 
-/* this throws off the line padding, but is (currently) necessary for edge detection */
-.em-row__header--block, .em-row__footer--block {
-  line-height: 3px;
-}
-/* highlight upper edge */
-.em-drag-head {
-  box-shadow:inset 0px 3px rgba(0,0,0,0.6);
-}
-/* highlight lower edge */
-.em-drag-tail {
-  box-shadow:inset 0px -3px rgba(0,0,0,0.6);
-}
 /* dragEnter adds, dragLeave removes */
-.em-drag-highlight {
+.em-drag-highlight:not(.em-drag-start) {
+  box-shadow:inset 0px 3px rgba(0,0,0,0.2);
   background-color: lightblue;
   transition: background-color 0.25s ease;
 }
-.em-drag-image {
+.em-drag-image.em-drag-mark {
   color: grey;
   background-color: silver;
+  border: 3px solid white;
+  max-width: 300px;
+  font-size: x-small;
 }
 .em-drag-start:not(.em-drag-image) {
   filter: blur(1px);
