compose/import: build ephemera from multiple files designated by the composer
extends web resource with Post
fixes some little bugs in the composer check button
changes composer check: we no longer PUT the file to test, we POST options to a stories/file/check endpoint and incorporate all related files ( shared files and files from the same project )

--- a/cmd/compose/www/index.css
+++ b/cmd/compose/www/index.css
@@ -52,8 +52,11 @@ body {
   font-family: monospace;
   display: flex;
 }
-.mk-tools button {
+.mk-tools__btn {
   margin:3px;
+}
+.mk-tools__msg {
+  align-self: center;
 }
 /**
  * mk-catalog
