--- a/cmd/compose/www/src/tags.css
+++ b/cmd/compose/www/src/tags.css
@@ -27,7 +27,7 @@
   border: 1px solid lightgray;
   border-radius: 5px;
   padding: 0px 5px;
-  margin-bottom: 1px;
+  border-top-width: 0;
 }
 
 .mk-num-ctrl {
