start of work on relation location
rel related:
- "relation" follows the (ugly) variable name pattern
- inline flow decl for pattern results
- removed locale and reparent ops; we can use just relation location
- ops for singular relation and multiple reciprocals ( untested )

other support:
- tweaks to let/assign
- a list.Range which uses a custom value implementation to provide a fixed set of numbers; replaces core.range which was an iterator
- a core.While loop; and tweaks to make list.each and core.while confluent: "repeating ..."

misc:
- log.Level for output control -- defaults to the new log level "error"
- small fluid additions, tweaks to some colors

--- a/cmd/compose/www/src/tags.css
+++ b/cmd/compose/www/src/tags.css
@@ -47,9 +47,12 @@
 /* role: CMD */
 .mk-flow-param[data-role="C"] {
   color:rgb(0, 102, 214);   /* blue*/
-  /*color: red;*/
   font-style: bold;
   font-size: larger;
+} 
+.mk-flow-param[data-role="F"] {
+  color:rgb(0, 102, 214);   /* blue*/
+  font-style: bold;
 }
 /* role: SEPARATOR */
 .mk-flow-param[data-role="Z"] {
@@ -61,8 +64,7 @@
 }
 /* role: SELECTOR, TOKEN, FUNCTION */
 .mk-flow-param[data-role="S"],
-.mk-flow-param[data-role="K"], 
-.mk-flow-param[data-role="F"] {
+.mk-flow-param[data-role="K"] {
   color:#c90000;
 }
 /* role: AMBIGUOUS */
